[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/Enemies/milksnake.png" type="Texture" id=1]
[ext_resource path="res://MilkSnake.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.5, 5 )

[sub_resource type="CircleShape2D" id=11]
radius = 250.162

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle-down"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle-left"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle-right"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle-up"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk-down"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 6, 4, 6 ]
}

[sub_resource type="Animation" id=8]
resource_name = "walk-left"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 3, 1, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "walk-right"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "walk-up"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 7, 5, 7 ]
}

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "idle-left"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "idle-down"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "idle-right"

[sub_resource type="AnimationNodeAnimation" id=29]
animation = "idle-up"

[sub_resource type="AnimationNodeBlendSpace2D" id=34]
blend_point_0/node = SubResource( 26 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 27 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 28 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 29 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=30]
animation = "walk-left"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "walk-down"

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "walk-right"

[sub_resource type="AnimationNodeAnimation" id=33]
animation = "walk-up"

[sub_resource type="AnimationNodeBlendSpace2D" id=35]
blend_point_0/node = SubResource( 30 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 31 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 32 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 33 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/Idle/node = SubResource( 34 )
states/Idle/position = Vector2( 322, 72 )
states/Walk/node = SubResource( 35 )
states/Walk/position = Vector2( 540, 72 )
transitions = [ "Idle", "Walk", SubResource( 36 ), "Walk", "Idle", SubResource( 37 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[node name="MilkSnake" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, 4 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
frame = 3

[node name="DetectPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/idle-down = SubResource( 3 )
anims/idle-left = SubResource( 4 )
anims/idle-right = SubResource( 5 )
anims/idle-up = SubResource( 6 )
anims/walk-down = SubResource( 7 )
anims/walk-left = SubResource( 8 )
anims/walk-right = SubResource( 9 )
anims/walk-up = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )
parameters/Idle/blend_position = Vector2( -0.0410959, -0.356223 )
parameters/Walk/blend_position = Vector2( -0.133072, -0.158798 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
